--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">ToDoList</string>
+    <string name="app_name">To-Do List</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_to_do_item">Add To do Item</string>
+    <string name="add_shopping_item">Add Shopping Item</string>
+
+    <string name="notification_channel_id">todo_channel</string>
+    <string name="notification_channel_name">To-Do List Notification</string>
 </resources>
